k8s/manifests-5113b0/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-5113b0
  namespace: journee
  labels:
    app: journee-5113b0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-5113b0
  template:
    metadata:
      labels:
        app: journee-5113b0
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-5113b0
          image: gcr.io/my-docker-471807/journee:5113b0-677b3f
          ports:
            - containerPort: 3000
