k8s/manifests-5113b0/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-5113b0
  namespace: journee
spec:
  selector:
    app: journee-5113b0
  ports:
    - port: 80
      targetPort: 3000
